--- a/client/package.json
+++ b/client/package.json
@@ -1,13 +1,31 @@
 {
-  "name": "easy-rent",
+  "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.6.10",
+    "@apollo/react-hooks": "^4.0.0",
+    "@chakra-ui/icon": "^3.0.11",
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.5",
+    "@chakra-ui/theme": "^2.1.13",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@stripe/stripe-js": "^1.41.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^4.4.1",
+    "framer-motion": "^7.5.3",
+    "graphql": "^15.4.0",
+    "jwt-decode": "^2.2.0",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
